--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.25",
+    "await-to-js": "^3.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/node": "^17.0.40",
+    "@types/react": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "babel-plugin-styled-components": "^2.0.7",
