--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:tdd": "jest --no-coverage --watch -u"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
